# MicroLink

./: .gitmodules  README.md
MicroLink/microlink_app/: CMakeLists.txt  CMakeLists.txt.localized.bak  readme.txt
MicroLink/microlink_app/DAP/Include/: DAP.h
MicroLink/microlink_app/config/: DAP_config.h  user_app_cfg.h
MicroLink/microlink_app/hpm_sdk_localized_for_hpm5301evklite/boards/openocd/soc/: hpm5301.cfg
MicroLink/microlink_app/hpm_sdk_localized_for_hpm5301evklite/middleware/fatfs/src/portable/: CMakeLists.txt
MicroLink/microlink_app/hpm_sdk_localized_for_hpm5301evklite/middleware/fatfs/src/portable/ram_flash/: hpm_ram_flash.c
MicroLink/microlink_app/linkers/segger/: flash_xip.icf
MicroLink/microlink_app/src/: dap_main.c  flash_fatfs.c  main.c  usb_configuration.c  usb_configuration.h
MicroLink/microlink_app/src/USB2MSC/: usb2msc.c
MicroLink/microlink_app/src/USB2Python/: usb2python.c
MicroLink/microlink_app/src/USB2UART/: usb2uart.c
MicroLink/microlink_app/src/USB2UART_TTL/: usb2uart_ttl.c  usb2uart_ttl.h
MicroLink/microlink_app/src/swd_host/: swd_host.c
MicroLink/microlink_app/vfs/: validation.c
MicroLink/microlink_app/vfs/drag-n-drop/: file_stream.c
micro_link/: CMakeLists.txt
micro_link/config/: DAP_config.h  FreeRTOSConfig.h  usb_config.h
micro_link/hpm5301evklite_flash_xip/: .gitignore  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
micro_link/hpm5301evklite_flash_xip/.cache/clangd/index/: hpm_sdk_version.h.0B3D6B61993FB6DA.idx  hpm_sdk_version.h.5CD8D6B32CC67D5D.idx  hpm_sdk_version.h.5E5EB5994A681BC2.idx  hpm_sdk_version.h.6BE3A095D204739D.idx  hpm_sdk_version.h.8310B3361C64DD16.idx  hpm_sdk_version.h.8B8749F4A34BE203.idx  hpm_sdk_version.h.C12365BF4CBC7DA5.idx
micro_link/hpm5301evklite_flash_xip/build_tmp/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/build_tmp/arch/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/build_tmp/boards/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/build_tmp/boards/hpm5301evklite/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/build_tmp/components/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/build_tmp/components/debug_console/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/build_tmp/components/enet_phy/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/build_tmp/components/usb/device/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/build_tmp/drivers/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/build_tmp/middleware/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/build_tmp/middleware/CMSIS/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/build_tmp/middleware/FreeRTOS/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/build_tmp/middleware/FreeRTOS/Source/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/build_tmp/middleware/FreeRTOS/Source/portable/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/build_tmp/middleware/cherryusb/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/build_tmp/middleware/eclipse_threadx/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/build_tmp/middleware/ptpd/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/build_tmp/soc/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/build_tmp/soc/HPM5301/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/build_tmp/utils/: cmake_install.cmake
micro_link/hpm5301evklite_flash_xip/iar_embedded_workbench/: cherryusb_device_cdc_acm_hid_msc_freertos.custom_argvars  cherryusb_device_cdc_acm_hid_msc_freertos.ewp  cherryusb_device_cdc_acm_hid_msc_freertos.eww  cherryusb_device_cdc_acm_hid_msc_freertos.json
micro_link/hpm5301evklite_flash_xip/segger_embedded_studio/: cherryusb_device_cdc_acm_hid_msc_freertos.emProject  cherryusb_device_cdc_acm_hid_msc_freertos.emSession  cherryusb_device_cdc_acm_hid_msc_freertos.json
micro_link/hpm5301evklite_flash_xip/segger_embedded_studio/Output/Debug/Exe/: demo.asm
micro_link/hpm_sdk_localized_for_hpm5301evklite/boards/hpm5301evklite/: board.c  board.h  pinmux.c
micro_link/hpm_sdk_localized_for_hpm5301evklite/drivers/src/: hpm_uart_drv.c
micro_link/hpm_sdk_localized_for_hpm5301evklite/middleware/cherryusb/osal/: usb_osal_freertos.c
micro_link/hpm_sdk_localized_for_hpm5301evklite/soc/HPM5301/toolchains/segger/: flash_xip.icf
micro_link/src/: cdc_acm_msc_dap.c  cdc_acm_msc_dap.h  flash_map.h  main.c  ota_api.c  ota_api.h  usb2uart.c  ymodem_send_file.c  ymodem_send_file.h
micro_link/src/DAPLINK/: compiler.h  validation.c
micro_link/src/DAPLINK/DAP/Include/: DAP.h
micro_link/src/DAPLINK/DAP/Source/: DAP.c
micro_link/src/DAPLINK/drag-n-drop/: file_stream.c  file_stream.h  vfs_manager.c  vfs_manager.h  vfs_user.c  virtual_fs.c
micro_link/src/DAPLINK/swd_host/: SWD_host.c
micro_link/src/ymodem/: wl_ymodem.h
ota_packager/: errlog.txt  rt_ota_packaging_tool.exe.config
固件/: MicroLink_V2.1.0.rbl  MicroLink_V2.1.1.rbl
(+9 files in other folders)
